# posted

./: .Rbuildignore  .gitignore  .zenodo.json  CITATION.cff  DESCRIPTION  NAMESPACE  README.md  build_attach_data.py  export-bibtex.py  index.html  make_python_docs.py  make_r_docs.R  makefile  mkdocs.yml  posted.py  pyproject.toml  references.bib  units_caching.py  versions.json
.github/workflows/: ci.yml  docs-dev.yml  docs-latest.yml  docs-release.yml  python_tests_and_linting.yml  release.yml  test_automation.yml  update_documentation.yml
0.4.0/: 404.html  sitemap.xml
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/api/: index.html
0.5.0/data/: Haber-Bosch with Air Separation Unit.py  Steam Methane Reforming.py  index.html
0.5.0/search/: search_index.json
0.5.0/sources/: index.html
0.5.1/: 404.html  index.html  sitemap.xml
0.5.1/api/: index.html
0.5.1/data/: Steel Casting and Rolling.py  Urea Synthesis.py  index.html
0.5.1/sources/: index.html
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/api/: index.html
0.5.2/data/: Direct Reduction of Iron.py  Electric Arc Furnace.py  Haber-Bosch with Reforming.py  Methanol Synthesis.py  index.html
0.5.2/search/: search_index.json
0.5.2/sources/: index.html
0.5.4/: 404.html  index.html  sitemap.xml
0.5.4/api/: index.html
0.5.4/data/: Cement Plant.py  Coal Gasification.py  Fischer-Tropsch.py  Gas Turbine.py  Methanol Synthesis with Reforming.py  index.html
0.5.4/overrides/: main.html
0.5.4/search/: search_index.json
0.5.4/sources/: index.html
R/: columns.R  config.R  config_config.R  config_read_config.R  definitions.R  exports.R  masking.R  noslag.R  path.R  read.R  settings.R  ted_TEBase.R  ted_TEDataFile.R  ted_TEDataSet.R  tedf.R  units.R  units_units.R
R/config/: config.R  read_config.R
R/posted/: columns.R  config.R  definitions.R  fields.R  masking.R  noslag.R  noslag_testing.ipynb  path.R  read.R  settings.R  tedf.R  units.R
R/ted/: TEBase.R  TEDataFile.R  TEDataSet.R
R/units/: units.R
data/: base_format.yml  dataformat.yml  flow_types.csv  tech_classes.yml  technologies.yml  techs.yml  ted_format.yml  units_cached.csv
data/bat/: ammonia-synthesis.csv  direct-air-capture.csv  electric-arc-furnace.csv  hydrogen-storage.csv  methanation.csv  methane-transport.csv  methanol-integrated.csv  methanol-synthesis.csv  methanol-to-olefine-synthesis.csv
data/ted/: ammonia-asu.csv  ammonia-integrated.csv  casting-and-rolling.csv  direct-reduction.csv  electrolysis.csv  fischer-tropsch.csv  low-temp-heat-pump.csv  methanol-to-gasoline.csv  urea-synthesis.csv
data/teds/: ammonia-asu.csv  ammonia-integrated.csv  default_masks.yml  (+16 more)
develop/: index.html
docs/: .nav.yml  about.md  api.md  docs_python_tutorial.ipynb  docs_python_tutorial.py  docs_r_tutorial.ipynb  get_started.md  index.md  installation.md  methodology.md  overview.md  sources.md  tedf.md
latest/: 404.html  index.html  nav.yml  objects.inv  sitemap.xml
man/: AbstractColumnDefinition.Rd  AbstractFieldDefinition.Rd  CommentDefinition.Rd  CustomFieldDefinition.Rd  DataSet.Rd  Mask.Rd  PeriodFieldDefinition.Rd  RegionFieldDefinition.Rd  SourceFieldDefinition.Rd  TEBase.Rd  TEDF.Rd  TEDFInconsistencyException.Rd  TEDataFile.Rd  TEDataSet.Rd  UnitDefinition.Rd  ValueDefinition.Rd  VariableDefinition.Rd  apply_cond.Rd  baseFormat.Rd  cachedUnits.Rd  collect_files.Rd  combine_units.Rd  convUnit.Rd  convUnitDF.Rd  defaultDtypes.Rd  defaultMasks.Rd  defaultUnits.Rd  dtypeMapping.Rd  flowTypes.Rd  is_float.Rd  normalise_units.Rd  normalise_values.Rd  pathOfDataFile.Rd  pathOfFile.Rd  pathOfOutputFile.Rd  pathOfTEDFile.Rd  readCSVDataFile.Rd  readYAMLDataFile.Rd  read_csv_file.Rd  read_definitions.Rd  (+7 more)
posted/: __init__.py  _common.py  _read.py  _widget.py  columns.py  fields.py  formatting.py  map_variables.py  masking.py  noslag.py  read.py  sources.py  tedf.py  variables.py
python/: Testing.ipynb  units_caching.py
scripts/: register_docs_kernel.py
src/: path.py
tests/: __init__.py  create-comparison-csvs.py  dataset-units.py  external-file.csv  external-file.py  lcox.py  main.R  main.py  noslag.py  nsha.py  process-tree.py  team.py  tedf.py  tedfiles.py  tedselect.py  test_normalise.py  test_noslag.py  test_sources.py  test_team.py  test_tedf.py  test_tedfs.py  test_units.py  testthat.R  units.py
v0.4.0/: index.html  objects.inv
(+615 files in other folders)
