[tool.poetry]
name = "posted"
version = "0.3.0"
description = "POSTED: Potsdam open-source techno-economic database"
authors = [
    "Philipp C. Verpoort <philipp.verpoort@pik-potsdam.de>",
    "Leo Heidweiler",
    "Paul Effing",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PhilippVerpoort/posted/"
packages = [
    {include = "posted", from = "python"},
]
include = ["python/posted/data/**/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyyaml = "^6.0"
numpy = "^1.24.2"
pandas = "^2.0.2"
pint = "^0.22.0"
sigfig = "^1.3.2"
pybtex = "^0.24.0"
pybtex-apa-style = "^1.3"
iam-units = "^2023.9.12"
pint-pandas = "^0.5"

[tool.poetry.group.dev.dependencies]
plotly = "^5.18.0"
igraph = "^0.11.3"
matplotlib = "^3.8.2"
openpyxl = "^3.1.2"
itables = "^2.1.1"
flake8 = "^7.1.0"
jupytext = "^1.16.4"
jupyterlab = "^4.2.4"

[tool.poetry.group.documentation.dependencies]
mkdocs-material = "^9.5.26"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.3"
mkdocs-jupyter = "^0.24.7"
pymdown-extensions = "^10.8.1"
mike = "^2.1.2"
rd2md = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "build_attach_data.py"

[tool.poetry.scripts]
posted = "posted.cmdline:main"
