[project]
name = "posted"
version = "0.5.0"
description = "POSTED: Potsdam open-source techno-economic database"
authors = [
    { name = "Philipp C. Verpoort", email = "philipp.verpoort@pik-potsdam.de" },
    { name = "Leo Heidweiler" },
    { name = "Paul Effing" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas (>=2.3.3,<3.0.0)",
    "pyyaml>=6.0",
    "cet-units",
]

[dependency-groups]
dev = [
    "ipydatagrid>=1.4.0",
    "ipywidgets>=8.1.8",
    "itables>=2.6.2",
    "jupyterlab>=4.5.0",
    "jupytext>=1.18.1",
    "line-profiler>=5.0.0",
    "pandas-stubs~=2.3.3",
    "plotly>=6.5.0",
    "pybtex>=0.25.1",
    "pybtex-apa-style>=1.3",
    "ruff>=0.14.10",
]
docs = [
    "ipydatagrid>=1.4.0",
    "ipywidgets>=8.1.8",
    "itables>=2.6.2",
    "jupyterlab>=4.5.0",
    "jupytext>=1.18.1",
    "markdown-exec>=1.12.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-nav>=3.3.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "plotly>=6.5.0",
    "pybtex>=0.25.1",
    "pybtex-apa-style>=1.3",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
cet-units = { git = "https://github.com/PhilippVerpoort/cet-units.git", rev = "main" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["posted*"]

[tool.setuptools.package-data]
"posted" = ["database/**"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
